--- a/kubejs/assets/createdieselgenerators/lang/zh_cn.json
+++ b/kubejs/assets/createdieselgenerators/lang/zh_cn.json
@@ -1,42 +1,123 @@
 {
-  "itemGroup.cdg_creative_tab": "Create: Diesel Generators",
+  "itemGroup.cdg_creative_tab": "机械动力：柴油动力",
+  "item.createdieselgenerators.wood_chip": "木屑",
+  "block.createdieselgenerators.chip_wood_block": "木屑块",
+  "block.createdieselgenerators.chip_wood_stairs": "木屑台阶",
+  "block.createdieselgenerators.chip_wood_slab": "木屑台阶",
+  "item.createdieselgenerators.lighter": "打火机",
+  "item.createdieselgenerators.oil_scanner": "石油探测器",
+  "item.createdieselgenerators.kelp_handle": "海带握把",
+  "item.createdieselgenerators.chemical_sprayer": "化学喷射器",
+  "item.createdieselgenerators.chemical_sprayer_lighter": "化学喷射器（火焰）",
   "item.createdieselgenerators.engine_piston": "引擎活塞",
   "item.createdieselgenerators.engine_silencer": "引擎消音器",
+  "item.createdieselgenerators.engine_turbocharger": "引擎涡轮增压器",
   "item.createdieselgenerators.plant_oil_bucket": "植物油桶",
-  "fluid.createdieselgenerators.plant_oil": "植物油",
+  "item.createdieselgenerators.distillation_controller": "蒸馏塔核心",
   "block.createdieselgenerators.plant_oil": "植物油",
-  "item.createdieselgenerators.biodiesel_bucket": "生物柴油桶",
+  "item.createdieselgenerators.crude_oil_bucket": "石油桶",
+  "block.createdieselgenerators.crude_oil": "石油",
+  "item.createdieselgenerators.biodiesel_bucket": "生物柴油",
   "item.createdieselgenerators.ethanol_bucket": "乙醇桶",
-  "fluid.createdieselgenerators.biodiesel": "生物柴油",
   "block.createdieselgenerators.biodiesel": "生物柴油",
-  "fluid.createdieselgenerators.ethanol": "乙醇",
   "block.createdieselgenerators.ethanol": "乙醇",
+  "block.createdieselgenerators.diesel": "柴油",
+  "block.createdieselgenerators.gasoline": "汽油",
+  "item.createdieselgenerators.diesel_bucket": "柴油桶",
+  "item.createdieselgenerators.gasoline_bucket": "汽油桶",
   "block.createdieselgenerators.diesel_engine": "柴油引擎",
-  "block.createdieselgenerators.basin_lid": "工作盆密封盖",
+  "block.createdieselgenerators.basin_lid": "工作盆盖",
   "block.createdieselgenerators.large_diesel_engine": "模块化柴油引擎",
-  "createdieselgenerators.recipe.basin_fermenting": "密封发酵",
-  "createdieselgenerators.recipe.diesel_combustion": "柴油引擎燃烧",
+  "block.createdieselgenerators.powered_engine_shaft": "动力传动杆",
+  "block.createdieselgenerators.huge_diesel_engine": "大型柴油引擎",
+  "block.createdieselgenerators.canister": "密封罐",
+  "block.createdieselgenerators.pumpjack_bearing": "采油机轴承",
+  "block.createdieselgenerators.pumpjack_hole": "采油机开口",
+  "block.createdieselgenerators.pumpjack_head": "采油机头部",
+  "block.createdieselgenerators.asphalt_block": "沥青块",
+  "block.createdieselgenerators.asphalt_stairs": "沥青楼梯",
+  "block.createdieselgenerators.asphalt_slab": "沥青台阶",
+  "block.createdieselgenerators.pumpjack_crank": "采油机曲柄",
 
-  "createdieselgenerators.ponder.diesel_engine.header": "使用柴油引擎产生应力",
-  "createdieselgenerators.ponder.diesel_engine.text_1": "柴油引擎是一种小巧的应力产出设备。",
+  "createdieselgenerators.recipe.basin_fermenting": "工作盆发酵",
+  "createdieselgenerators.recipe.diesel_combustion": "柴油引擎燃烧",
+  "createdieselgenerators.recipe.distillation": "蒸馏",
+
+  "createdieselgenerators.goggle.problem_encountered": "遇到故障！",
+  "createdieselgenerators.goggle.oil_amount": "油量:",
+  "createdieselgenerators.goggle.pumpjack_invalid_pipes": "缺少与基岩的连接",
+
+  "createdieselgenerators.pumpjack_bearing.tooltip.summary": "充当_采油机_的轴承部分。",
+  "createdieselgenerators.engine_silencer.tooltip.summary": "对_柴油引擎_使用使其消音。",
+  "createdieselgenerators.engine_turbocharger.tooltip.summary": "对_柴油引擎_使用使其加速运转。",
+  "createdieselgenerators.canister.tooltip.summary": "绝佳的流体容器，它被破坏时不会丢失内部流体。",
+  "createdieselgenerators.lighter.tooltip.summary": "一个_打火机_，需要_可燃流体_来燃烧。",
+  "createdieselgenerators.chemical_sprayer.tooltip.summary": "装满任何_流体_对着你的_朋友_或_敌人_喷射吧！",
+  "createdieselgenerators.chemical_sprayer_lighter.tooltip.summary": "装满任何_流体_对着你的_朋友_或_敌人_喷射吧！当装满_可燃流体_时，其功能就像_火焰喷射器_。",
+  "createdieselgenerators.oil_scanner.tooltip.summary": "用于搜寻_富油区块_",
+
+  "createdieselgenerators.tooltip.holdForFuelStats": "燃料统计：[%1$s] ",
+  "createdieselgenerators.tooltip.keyAlt": "Alt",
+
+  "createdieselgenerators.tooltip.fuelSpeed": "速度: %1$s rpm",
+  "createdieselgenerators.tooltip.fuelStress": "应力: %1$s su",
+  "createdieselgenerators.tooltip.fuelBurnRate": "燃料燃烧速率: %1$s mb/s",
+
+  "createdieselgenerators.ponder.distillation_tower.header": "部署蒸馏塔",
+  "createdieselgenerators.ponder.distillation_tower.text_1": "对流体储罐使用蒸馏塔核心来创建蒸馏塔。",
+  "createdieselgenerators.ponder.distillation_tower.text_2": "泵入些许石油。。。",
+  "createdieselgenerators.ponder.distillation_tower.text_3": "。。。给予燃烧室一些燃料。。。",
+  "createdieselgenerators.ponder.distillation_tower.text_4": "。。。蒸馏物将会出现！",
+  "createdieselgenerators.ponder.distillation_tower.text_5": "蒸馏塔可以开窗。",
+  "createdieselgenerators.ponder.pumpjack.header": "部署采油机",
+  "createdieselgenerators.ponder.pumpjack.text_1": "采油机允许你挖取石油。。。",
+  "createdieselgenerators.ponder.pumpjack.text_2": "。。。要搭建采油机，请先连接采油机曲柄。。。",
+  "createdieselgenerators.ponder.pumpjack.text_3": "。。。并且搭建管道与基岩连接。",
+  "createdieselgenerators.ponder.pumpjack.text_4": "采油机只能从富油区块中采取石油，你可以用探测器来找出这些区块",
+  "createdieselgenerators.ponder.pumpjack.text_5": "当成功组装，它将生产石油。",
+  "createdieselgenerators.ponder.diesel_engine.header": "部署柴油引擎",
+  "createdieselgenerators.ponder.diesel_engine.text_1": "柴油引擎是一种紧凑的产生动力的机器。",
   "createdieselgenerators.ponder.diesel_engine.text_2": "给它一点燃料，它就会产生应力。",
-  "createdieselgenerators.ponder.basin_fermenting_station.header": "工作盆内物品发酵",
-  "createdieselgenerators.ponder.basin_fermenting_station.text_1": "工作盆密封盖能允许您的工作盆发酵物体，例如乙醇。",
-  "createdieselgenerators.ponder.basin_fermenting_station.text_2": "放入一些糖和骨粉。。。",
-  "createdieselgenerators.ponder.basin_fermenting_station.text_3": "。。。乙醇就会出现。（仅供参考，配方会被修改）",
-  "createdieselgenerators.ponder.large_diesel_engine.header": "使用模块化柴油引擎产生应力",
+  "createdieselgenerators.ponder.basin_fermenting_station.header": "部署发酵用工作盆",
+  "createdieselgenerators.ponder.basin_fermenting_station.text_1": "工作盆盖可以让你发酵出乙醇。",
+  "createdieselgenerators.ponder.basin_fermenting_station.text_2": "加一点糖和骨粉。。。",
+  "createdieselgenerators.ponder.basin_fermenting_station.text_3": "。。。乙醇就会出现",
+  "createdieselgenerators.ponder.large_diesel_engine.header": "部署模块化柴油引擎",
   "createdieselgenerators.ponder.large_diesel_engine.text_1": "模块化柴油引擎与普通的柴油引擎功能类似。",
-  "createdieselgenerators.ponder.large_diesel_engine.text_2": "只要给它们一点燃料，它们就会产生应力。。。",
-  "createdieselgenerators.ponder.large_diesel_engine.text_3": "。。。它们可以堆叠",
+  "createdieselgenerators.ponder.large_diesel_engine.text_2": "一旦它一点燃料，它就会产生应力。。。",
+  "createdieselgenerators.ponder.large_diesel_engine.text_3": "。。。它们可以堆叠。",
   "createdieselgenerators.ponder.large_diesel_engine.text_4": "它们会产生与你堆叠的引擎数量成比例的应力。",
   "createdieselgenerators.ponder.engine_silencer.header": "部署引擎消音器",
-  "createdieselgenerators.ponder.engine_silencer.text_1": "引擎消音器能使柴油引擎保持静音。",
+  "createdieselgenerators.ponder.engine_silencer.text_1": "引擎消音器能使柴油引擎悄无声息的运转。",
   "createdieselgenerators.ponder.engine_silencer.text_2": "只要部署了引擎消音器，柴油引擎将停止发出任何声音。",
+  "createdieselgenerators.ponder.huge_diesel_engine.header": "部署大型柴油引擎",
+  "createdieselgenerators.ponder.huge_diesel_engine.text_1": "大型柴油引擎与传动杆连接。。。",
+  "createdieselgenerators.ponder.huge_diesel_engine.text_2": "。。。它会产生应力，只要你给它一些燃料。",
 
+  "createdieselgenerators.display_source.pumpjack_hole_source": "油量",
   "createdieselgenerators.display_source.diesel_engine_source": "引擎状态",
   "createdieselgenerators.display_source.large_diesel_engine_source": "引擎状态",
   "createdieselgenerators.display_source.engine_status": "引擎状态",
   "createdieselgenerators.display_source.speed": "速度 : ",
   "createdieselgenerators.display_source.stress": "应力 : ",
-  "createdieselgenerators.display_source.idle": "闲置"
+  "createdieselgenerators.display_source.idle": "闲置",
+  "createdieselgenerators.tooltip.empty": "空",
+  "createdieselgenerators.generic.unit.mbps": "mB/s",
+
+  "sounds.createdieselgenerators.diesel_engine_sound": "柴油引擎的咆哮",
+  "createdieselgenerators.pumpjack_crank.crank_size": "曲柄尺寸",
+
+  "createdieselgenerators.gui.assembly.exception.bearing_missing": "后轴承丢失！",
+  "createdieselgenerators.gui.assembly.exception.too_many_bearings": "连接的后轴承过多！",
+  "createdieselgenerators.gui.assembly.exception.head_missing": "采油机头部丢失！",
+  "createdieselgenerators.gui.assembly.exception.too_many_heads": "连接的采油机头部过多！",
+  "createdieselgenerators.gui.assembly.exception.arm_too_short": "后臂太短！",
+  "createdieselgenerators.gui.assembly.exception.arm_too_long": "后臂太长！",
+  "createdieselgenerators.gui.assembly.exception.back_bearing_not_centered": "后轴承未居中！",
+
+  "createdieselgenerators.actionbar.oil_scanner.searching": "§l搜寻原油中。。。",
+  "createdieselgenerators.actionbar.oil_scanner.oil_none": "§l未发现原油。。。",
+  "createdieselgenerators.actionbar.oil_scanner.oil_low": "§l发现少量原油。。。",
+  "createdieselgenerators.actionbar.oil_scanner.oil_high": "§l发现大量原油。。。",
+  "createdieselgenerators.actionbar.oil_scanner.too_high_up": "§l所处位置过高，无法搜寻原油。。。"
 }
